--- a/index.html
+++ b/index.html
@@ -1,30 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Sergi Costafreda — Presentations</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Slides Landing Page</title>
   <style>
-    :root{--bg:#0e0f11;--text:#e9edf5;--muted:#aab0bb;--card:#141821;--border:rgba(255,255,255,.08);--accent:#3b82f6;}
-    *{box-sizing:border-box;margin:0;padding:0} body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,Cantarell,sans-serif;background:var(--bg);color:var(--text);}
-    .wrap{max-width:860px;margin:6rem auto;padding:0 1.25rem}
-    h1{font-size:2rem;margin-bottom:.5rem} p{color:var(--muted);margin-bottom:2rem}
-    ul{list-style:none;display:grid;gap:12px}
-    a.card{display:block;padding:14px 16px;background:var(--card);border:1px solid var(--border);border-radius:12px;text-decoration:none;color:var(--text)}
-    a.card:hover{border-color:var(--accent)}
-    small{color:var(--muted)}
+    body {
+      font-family: Arial, sans-serif;
+      margin: 2rem;
+      background: #f9f9f9;
+      color: #333;
+    }
+    h1 {
+      color: #222;
+    }
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    li {
+      margin: 0.8rem 0;
+    }
+    a {
+      text-decoration: none;
+      color: #0066cc;
+      font-size: 1.1rem;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      margin-top: 3rem;
+      font-size: 0.9rem;
+      color: #777;
+    }
   </style>
 </head>
 <body>
-  <main class="wrap">
-    <h1>Presentations</h1>
-    <p>Public slide decks by Sergi Costafreda. Open a deck and use ← → keys to navigate; print to PDF if needed.</p>
-    <ul>
-      <li><a class="card" href="decks/template.html"><b>Template</b> — minimal starter</a></li>
-      <!-- Add your production decks below as you create them -->
-      <li><a class="card" href="decks/deck1.html"><b>Deck 1</b> — Title of your talk <small>(placeholder)</small></a></li>
-      <li><a class="card" href="decks/deck2.html"><b>Deck 2</b> — Another title <small>(placeholder)</small></a></li>
-    </ul>
-  </main>
+  <h1>My Slides</h1>
+  <p>Select a deck to view:</p>
+  <ul>
+    <li><a href="decks/template.html">Template Deck</a></li>
+    <!-- Future decks will go here -->
+    <!-- Example:
+    <li><a href="decks/deck1.html">Deck 1: Project Overview</a></li>
+    <li><a href="decks/deck2.html">Deck 2: Research Findings</a></li>
+    -->
+  </ul>
+
+  <footer>
+    Hosted on <a href="https://github.com/sergicostafreda/slides" target="_blank">GitHub</a>
+  </footer>
 </body>
 </html>
