style: update branding to consistent lighter grey name and add example content slide

--- a/decks/template.html
+++ b/decks/template.html
@@ -60,8 +60,9 @@
 </head>
 <body>
   <div class="presentation" aria-live="polite">
-    <div class="brand" aria-hidden="true"><b>Sergi Costafreda</b> · Presentations</div>
-
+    <div class="brand" aria-hidden="true">
+      <span class="name">Sergi Costafreda</span> · Presentations
+    </div>
     <!-- Slide 1 (Title) -->
     <section class="slide active" role="group" aria-roledescription="slide" aria-label="Title – Hello world">
       <h1>Hello, world</h1>
