feat: add boilerplate deck1.html and link from index

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   <p>Select a deck to view:</p>
   <ul>
     <li><a href="decks/template.html">Template Deck</a></li>
+    <li><a href="decks/deck1.html">Deck 1</a></li>
     <!-- Future decks will go here -->
     <!-- Example:
     <li><a href="decks/deck1.html">Deck 1: Project Overview</a></li>
