--- a/decks/deck1.html
+++ b/decks/deck1.html
@@ -1,9 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Deck 1 – Sergi Costafreda</title>
-  <link rel="stylesheet" href="../style.css">
+  <style>
+    :root{
+      --bg:#0e0f11; --panel:#121419; --text:#f5f7fb; --muted:#aab0bb;
+      --accent:#3b82f6; --accent-2:#7c3aed; --border:rgba(255,255,255,.08);
+    }
+    *{box-sizing:border-box;margin:0;padding:0}
+    html,body{height:100%}
+    body{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Ubuntu,Cantarell,sans-serif;background:var(--bg);color:var(--text);overflow:hidden}
+
+    .presentation{position:relative;height:100vh;width:100vw}
+
+    /* Slides */
+    .slides{height:100%;width:100%}
+    .slide{
+      display:none; height:100%; width:100%; padding:4rem 2rem;
+      background: radial-gradient(1200px 600px at 50% 20%, rgba(74,108,247,.15), transparent 60%),
+                  linear-gradient(135deg, var(--panel) 0%, #0f1220 100%);
+      border-top:1px solid var(--border);
+      display:flex; flex-direction:column; align-items:center; justify-content:center; text-align:center;
+    }
+
+    /* Headings */
+    h1{font-size:3.4rem;line-height:1.1;font-weight:800;margin-bottom:1rem;letter-spacing:.2px;
+       background:linear-gradient(135deg,var(--accent) 0%,var(--accent-2) 100%);
+       -webkit-background-clip:text;-webkit-text-fill-color:transparent}
+    p.subtitle{font-size:1.125rem;color:var(--muted);max-width:900px}
+
+    /* Brand (your preference) */
+    .brand{position:fixed;top:1.5rem;left:1.5rem;color:var(--muted);font-weight:600;letter-spacing:.3px;opacity:.9}
+    .brand .name{color:#666;font-weight:400}
+
+    /* Nav */
+    .nav{position:fixed;left:50%;bottom:1.5rem;transform:translateX(-50%);display:flex;gap:.5rem;z-index:1000;align-items:center}
+    .nav .nav-btn{background:rgba(255,255,255,.06);border:1px solid var(--border);color:var(--text);padding:.5rem .9rem;border-radius:10px;cursor:pointer}
+    .nav .nav-btn:hover{background:rgba(255,255,255,.12)}
+    .dots{display:flex;gap:.35rem;align-items:center}
+    .dot{width:.45rem;height:.45rem;border-radius:999px;background:rgba(255,255,255,.25);border:1px solid var(--border)}
+    .slide-number{position:fixed;right:1.5rem;bottom:1.5rem;color:#8a90a0;font-size:.95rem}
+
+    /* Pure-CSS controller */
+    input[type=radio]{position:fixed;opacity:0;pointer-events:none}
+
+    /* Map radios to slides (3 slides) */
+    #r1:checked ~ .slides #s1{display:flex}
+    #r2:checked ~ .slides #s2{display:flex}
+    #r3:checked ~ .slides #s3{display:flex}
+
+    /* Prev/Next visibility per slide */
+    .prev,.next{display:none}
+    #r1:checked ~ .nav .next1{display:inline-block}
+    #r2:checked ~ .nav .prev2, #r2:checked ~ .nav .next2{display:inline-block}
+    #r3:checked ~ .nav .prev3{display:inline-block}
+
+    /* Active dot */
+    #r1:checked ~ .nav .d1{background:#fff}
+    #r2:checked ~ .nav .d2{background:#fff}
+    #r3:checked ~ .nav .d3{background:#fff}
+
+    /* Counter text */
+    #r1:checked ~ .slide-number::after{content:"1 / 3"}
+    #r2:checked ~ .slide-number::after{content:"2 / 3"}
+    #r3:checked ~ .slide-number::after{content:"3 / 3"}
+
+    /* Print/PDF */
+    @media print{
+      body{overflow:visible}
+      .nav,.slide-number,.brand{display:none !important}
+      .slide{display:block !important;height:auto;min-height:100vh;break-after:page;-webkit-print-color-adjust:exact;print-color-adjust:exact}
+    }
+  </style>
 </head>
 <body>
   <div class="presentation" aria-live="polite">
@@ -11,20 +81,49 @@
       <span class="name">Sergi Costafreda</span> · Presentations
     </div>
 
-    <section>
-      <h1>Deck 1</h1>
-      <p>Welcome to your new presentation.</p>
-    </section>
+    <!-- Radios (3 slides) -->
+    <input type="radio" name="r" id="r1" checked>
+    <input type="radio" name="r" id="r2">
+    <input type="radio" name="r" id="r3">
 
-    <section>
-      <h2>Slide 2</h2>
-      <p>Example placeholder content.</p>
-    </section>
+    <div class="slides">
+      <!-- SLIDE 1 -->
+      <section class="slide" id="s1" role="group" aria-roledescription="slide" aria-label="Deck 1 – Welcome">
+        <h1>Deck 1</h1>
+        <p class="subtitle">Welcome to your new presentation.</p>
+      </section>
 
-    <section>
-      <h2>Slide 3</h2>
-      <p>Continue building your deck here.</p>
-    </section>
+      <!-- SLIDE 2 -->
+      <section class="slide" id="s2" role="group" aria-roledescription="slide" aria-label="Slide 2 – Example">
+        <h2>Slide 2</h2>
+        <p>Example placeholder content.</p>
+      </section>
+
+      <!-- SLIDE 3 -->
+      <section class="slide" id="s3" role="group" aria-roledescription="slide" aria-label="Slide 3 – Continue">
+        <h2>Slide 3</h2>
+        <p>Continue building your deck here.</p>
+      </section>
+    </div>
+
+    <!-- Pure-CSS Nav + dots + counter -->
+    <div class="nav" aria-label="Slide navigation">
+      <!-- prev labels -->
+      <label for="r1" class="nav-btn prev prev2">← Previous</label>
+      <label for="r2" class="nav-btn prev prev3">← Previous</label>
+
+      <div class="dots" aria-hidden="true">
+        <label for="r1" class="dot d1" title="1"></label>
+        <label for="r2" class="dot d2" title="2"></label>
+        <label for="r3" class="dot d3" title="3"></label>
+      </div>
+
+      <!-- next labels -->
+      <label for="r2" class="nav-btn next next1">Next →</label>
+      <label for="r3" class="nav-btn next next2">Next →</label>
+    </div>
+
+    <div class="slide-number" aria-live="polite"></div>
   </div>
 </body>
 </html>
