--- a/decks/template.html
+++ b/decks/template.html
@@ -16,20 +16,26 @@
     .presentation{position:relative;height:100vh;width:100vw}
 
     /* Slides */
-    .slides{height:100%;width:100%}
     .slide{
-      display:none; height:100%; width:100%; padding:4rem 2rem;
-      background: radial-gradient(1200px 600px at 50% 20%, rgba(74,108,247,.15), transparent 60%),
-                  linear-gradient(135deg, var(--panel) 0%, #0f1220 100%);
-      border-top:1px solid var(--border);
-      /* flex applies when the slide is shown */
-      display:flex; flex-direction:column; align-items:center; justify-content:center; text-align:center;
+    display:none;
+    height:100%;
+    width:100%;
+    padding:4rem 2rem;
+    background: radial-gradient(1200px 600px at 50% 20%, rgba(74,108,247,.15), transparent 60%),
+                linear-gradient(135deg, var(--panel) 0%, #0f1220 100%);
+    border-top:1px solid var(--border);
+
+    /* keep flex properties so when shown, slide content centers */
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+    text-align:center;
     }
 
     /* Headings */
     h1{font-size:3.4rem;line-height:1.1;font-weight:800;margin-bottom:1rem;letter-spacing:.2px;
        background:linear-gradient(135deg,var(--accent) 0%,var(--accent-2) 100%);
-       -webkit-background-clip:text;-webkit-text-fill-color:transparent}
+       background-clip:text; -webkit-background-clip:text;-webkit-text-fill-color:transparent}
     p.subtitle{font-size:1.125rem;color:var(--muted);max-width:900px}
 
     /* Brand (matches your preference) */
@@ -44,9 +50,14 @@
     .dot{width:.45rem;height:.45rem;border-radius:999px;background:rgba(255,255,255,.25);border:1px solid var(--border)}
     .slide-number{position:fixed;right:1.5rem;bottom:1.5rem;color:#8a90a0;font-size:.95rem}
 
-    /* Pure-CSS “controller” */
-    input[type=radio]{position:fixed;opacity:0;pointer-events:none}
-
+    /* Pure-CSS controller: hide radios off-screen (label clicks still work everywhere) */
+    input[type=radio]{
+      position:absolute;
+      left:-9999px;
+      opacity:0;
+    }
+    /* make the dot labels feel clickable too */
+    .dot{ cursor:pointer; }
     /* Map radios to slides — add/remove rules as you add slides */
     #r1:checked ~ .slides #s1{display:flex}
     #r2:checked ~ .slides #s2{display:flex}
