remove professional mention as dorky

--- a/decks/template.html
+++ b/decks/template.html
@@ -112,7 +112,7 @@
       <!-- SLIDE 1 -->
       <section class="slide" id="s1" role="group" aria-roledescription="slide" aria-label="Title">
         <h1>Hello, world</h1>
-        <p class="subtitle">A minimal, professional HTML slide template – no JS required.</p>
+        <p class="subtitle">A minimal HTML slide template – no JS required.</p>
       </section>
 
       <!-- SLIDE 2 -->
