Feat: created drafts folder that is gitignored so not public, when ready for public then I copy to decks and add to index.html

--- a/decks/template.html
+++ b/decks/template.html
@@ -6,8 +6,8 @@
   <title>Presentation Template – Sergi Costafreda</title>
   <style>
     :root{
-      --bg:#0e0f11; --panel:#121419; --text:#f5f7fb; --muted:#aab0bb;
-      --accent:#3b82f6; --accent-2:#7c3aed; --border:rgba(255,255,255,.08);
+      --bg:#1C1B1A; --panel:#282726; --text:#F2F0E5; --muted:#878580;
+      --accent:#4385BE; --accent-2:#8B7EC8; --border:rgba(135,133,128,.15);
     }
     *{box-sizing:border-box;margin:0;padding:0}
     html,body{height:100%}
@@ -40,15 +40,15 @@
 
     /* Brand (matches your preference) */
     .brand{position:fixed;top:1.5rem;left:1.5rem;color:var(--muted);font-weight:600;letter-spacing:.3px;opacity:.9}
-    .brand .name{color:#666;font-weight:400}
+    .brand .name{color:#6F6E69;font-weight:400}
 
     /* Nav */
     .nav{position:fixed;left:50%;bottom:1.5rem;transform:translateX(-50%);display:flex;gap:.5rem;z-index:1000;align-items:center}
-    .nav .nav-btn{background:rgba(255,255,255,.06);border:1px solid var(--border);color:var(--text);padding:.5rem .9rem;border-radius:10px;cursor:pointer}
-    .nav .nav-btn:hover{background:rgba(255,255,255,.12)}
+    .nav .nav-btn{background:rgba(242,240,229,.06);border:1px solid var(--border);color:var(--text);padding:.5rem .9rem;border-radius:10px;cursor:pointer}
+    .nav .nav-btn:hover{background:rgba(242,240,229,.12)}
     .dots{display:flex;gap:.35rem;align-items:center}
-    .dot{width:.45rem;height:.45rem;border-radius:999px;background:rgba(255,255,255,.25);border:1px solid var(--border)}
-    .slide-number{position:fixed;right:1.5rem;bottom:1.5rem;color:#8a90a0;font-size:.95rem}
+    .dot{width:.45rem;height:.45rem;border-radius:999px;background:rgba(242,240,229,.25);border:1px solid var(--border)}
+    .slide-number{position:fixed;right:1.5rem;bottom:1.5rem;color:#9F9D96;font-size:.95rem}
 
     /* Pure-CSS controller: hide radios off-screen (label clicks still work everywhere) */
     input[type=radio]{
@@ -78,7 +78,7 @@
     #r2:checked ~ .nav .d2,
     #r3:checked ~ .nav .d3,
     #r4:checked ~ .nav .d4,
-    #r5:checked ~ .nav .d5 { background:#fff }
+    #r5:checked ~ .nav .d5 { background:#F2F0E5 }
 
     /* Counter text */
     #r1:checked ~ .slide-number::after{content:"1 / 5"}
